Fin de la base de la Home page

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ sans-serif;
 --ut-orange: #ff8500;
 --princeton-orange: #ff9100;
 --orange-peel: #ff9e00;
---russian-violet: #240046;
+--russian-violet: #0f001d;
 --persian-indigo: #3c096c;
 --tekhelet: #5a189a;
 --french-violet: #7b2cbf;
