--- a/src/index.css
+++ b/src/index.css
@@ -86,5 +86,29 @@ sans-serif;
  .ghostFx > div{
      opacity: 0;
      transform: translateX(100%);
-     transition: opacity 1.2s ease-out, transform 1.2s ease-out;
+     transition: opacity 1.3s ease-out, transform 1.3s ease-out;
  }
+
+ /* Type animation */
+
+.type-container {
+    font-family: Arial, sans-serif;
+    display: inline-block;
+}
+
+.cursor {
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+
+    0%,
+    49% {
+        opacity: 1;
+    }
+
+    50%,
+    100% {
+        opacity: 0;
+    }
+}
