--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@ sans-serif;
         @apply font-nunito;
         @apply bg-deep-purple;
     }
-
     li {
         @apply px-4;
         @apply font-archivo;
@@ -65,7 +64,7 @@ sans-serif;
  .content-div:hover {
     background-image: linear-gradient(
         to right,
-        rgba(255, 207, 112, 0.8),
+        rgba(248, 153, 80, 0.8),
         hsla(266, 71%, 53%, 0.8)
     )!important;
  }
@@ -111,4 +110,10 @@ sans-serif;
     100% {
         opacity: 0;
     }
+}
+
+/* Nav bg Change Animation */
+
+.navbar {
+    transition: background-color 0.5s ease;
 }
